tests/errors/constructor_pub_new.dang
type Foo {
  name: String!

  new(n: String!): Foo! {
    self.name = n
    self
  }
}
